# mindav

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  config.json.example  docker-compose.yaml  go.mod  go.sum  main.go  readme.md
.github/workflows/: docker-image.yml
config/: app.go  minio.go
examples/: list_root.rs  test.rs
minio/: file.go  fileinfo.go  filesystem.go  utils.go
src/: app.rs  config.rs  lib.rs  main.rs  userfs.rs  utils.rs
src/minio/: dir.rs  file.rs  fileinfo.rs  filesystem.rs  mod.rs
tests/: e2e_tests.rs  s3_integration_tests.rs
utils/: env.go
webdav/: server.go
