[package]
name = "mindav"
version = "0.1.4"
edition = "2021"
description = "MinIO WebDAV bridge - WebDAV server backed by MinIO/S3 storage"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dav-server = "0.11"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
bytes = "1"
aws-smithy-types = "1"
axum-auth = { version = "0.8", features = ["auth-basic"] }
